chore: agrega link a maps

--- a/src/components/Section2.astro
+++ b/src/components/Section2.astro
@@ -32,7 +32,9 @@ import Title from "./Title.astro";
                         </p>
                     </div>
                 </div>
-                <Button text="Ir a Google Maps" />
+                <a href="https://maps.app.goo.gl/7QMxRjAPDBi7NiZJ9" target="_blank">
+                    <Button text="Ir a Google Maps"/>
+                </a>
             </div>
             <div class="w-screen lg:w-1/2 items-center justify-center flex" id="img-vol">
                 <img src="/section2-img.webp" class="hidden lg:block" alt="" />
