fix: cambios varios solicitado spor clienta

--- a/src/components/Section1.astro
+++ b/src/components/Section1.astro
@@ -15,15 +15,15 @@ import Gallery from './Gallery.jsx';
                 <div class="" id="div2">
                     <div class="max-w-[400px] border-[#83A327] border-l-[10px] p-5" id="title1">
                         <p
-                            class="font-nunito uppercase font-black text-[#494949] text-[1rem] md:text-[1.3rem]"
+                            class="font-nunito uppercase font-black text-[#494949] text-[1rem] 2xl:text-[1.3rem]"
                             >Sumérgete en la&nbsp;</p
                         >
                         <p
-                            class="font-nunito uppercase font-black text-[#83A327] text-[1rem] md:text-[1.3rem]"
+                            class="font-nunito uppercase font-black text-[#83A327] text-[1rem] 2xl:text-[1.3rem]"
                             >experiencia única&nbsp;</p
                         >
                         <p
-                            class="font-nunito uppercase font-black text-[#494949] text-[1rem] md:text-[1.3rem]"
+                            class="font-nunito uppercase font-black text-[#494949] text-[1rem] 2xl:text-[1.3rem]"
                             >de explorar</p
                         >
                         <Title title="Geoturismo Contrafuerte" />
@@ -31,7 +31,7 @@ import Gallery from './Gallery.jsx';
     
                     <div class="max-w-[400px] border-[#83A327] border-l-[10px] p-5 hidden" id="title2">
                         <span
-                            class="font-nunito uppercase font-black text-[#83A327] text-[1rem] md:text-[1.3rem]"
+                            class="font-nunito uppercase font-black text-[#83A327] text-[1rem] 2xl:text-[1.3rem]"
                             >Geo patrimonio</span
                         >
                     </div>
