--- a/src/components/Section2.astro
+++ b/src/components/Section2.astro
@@ -9,15 +9,15 @@ import Title from "./Title.astro";
                 <div class="" id="div2">
                     <div class="max-w-[400px] border-[#83A327] border-l-[10px] p-5">
                         <span
-                            class="font-nunito uppercase font-black text-[#83A327] text-[1rem] md:text-[1.3rem]"
+                            class="font-nunito uppercase font-black text-[#83A327] text-[1rem] 2xl:text-[1.3rem]"
                             >Aventúrate&nbsp;</span
                         >
                         <span
-                            class="font-nunito uppercase font-black text-[#494949] text-[1rem] md:text-[1.3rem]"
+                            class="font-nunito uppercase font-black text-[#494949] text-[1rem] 2xl:text-[1.3rem]"
                             >y déjate llevar por la belleza de la&nbsp;</span
                         >
                         <span
-                            class="font-nunito uppercase font-black text-[#83A327] text-[1rem] md:text-[1.3rem]"
+                            class="font-nunito uppercase font-black text-[#83A327] text-[1rem] 2xl:text-[1.3rem]"
                             >tierra</span
                         >
                         <Title title="Ubicación"/>
