--- a/src/components/Section5/Section5.astro
+++ b/src/components/Section5/Section5.astro
@@ -4,7 +4,7 @@ import Info from './Info.astro';
 
 const info = [
     {icon: '/icon-trekking2.svg', title: 'TREKKING HACIA LAS TERMAS', details: 'Tiempo en subir los 14km:', value: '4 a 4,5 HRS'},
-    {icon: '/icon-bike.svg', title: 'BICICLETA', details: 'Tiempo en subir los 14km:', value: 'MTB 3,5 HRS ELÉCTRICA: 1HR'},
+    {icon: '/icon-bike.svg', title: 'BICICLETA', details: 'Tiempo en subir los 14km:', value: 'MTB: 3,5 HRS ELÉCTRICA: 1HR'},
     {icon: '/icon-vehicle2.svg', title: 'VEHÍCULO CON TRACCIÓN', details: 'Tiempo en subir los 14km:', value: '4X4: 1,5 HRS'}
 ]
 ---
