--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -75,6 +75,10 @@ import ScrollButton from "../components/ScrollButton.astro";
 		font-family: "Nunito Sans";
 	}
 
+	@media (max-width: 1000px) {
+		
+	}
+
 	.stroke-1px-white {
 		-webkit-text-stroke: 1px white;
 	}
@@ -116,7 +120,7 @@ import ScrollButton from "../components/ScrollButton.astro";
 		background: url("/left.svg") no-repeat;
 	}
 
-	@media screen and (max-height: 700px) {
+	@media (max-height: 630px) {
 		.map-img-h {
 			display: none;
 		}
@@ -137,7 +141,7 @@ import ScrollButton from "../components/ScrollButton.astro";
 
 	@media screen and (max-height: 849px) {
 		.price-descrip .col-3-2 {
-			margin-top: -7rem;
+			margin-top: -5rem;
 		}
 	}
 </style>
