--- a/src/components/Section4/SlidesMobile.astro
+++ b/src/components/Section4/SlidesMobile.astro
@@ -13,7 +13,7 @@ const rowData = [
             },
             {
                 icon: "/icon-vehicle.svg",
-                text: "Tiempo total de caminata: <b>1,5 HRS.</b>.<br><b>DIFICULTAD BAJA</b>",
+                text: "Tiempo total en vehículo: <b>1,5 HRS.</b>.<br><b>DIFICULTAD BAJA</b>",
             },
             {
                 icon: "/icon-calendar.svg",
