feat: add new iframe image 360

--- a/src/components/Frame.astro
+++ b/src/components/Frame.astro
@@ -9,4 +9,14 @@
             src="https://kuula.co/share/5mbwH?logo=1&info=1&fs=1&vr=0&sd=1&thumbs=1"
         ></iframe>
     </div>
+
+    <div>
+        <iframe
+            width="100%"
+            height="640"
+            allow="xr-spatial-tracking; gyroscope; accelerometer"
+            allowfullscreen=""
+            src="https://kuula.co/share/hztDJ?logo=1&info=1&fs=1&vr=0&zoom=1&thumbs=1"
+        ></iframe>
+    </div>
 </section>
