feat(credit): agrega ig en footer

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -52,6 +52,8 @@ const data = [
                             <li><a href="https://instagram.com/paulinoandres" target="_blank">@paulinoandres</a></li>
                             <li><a href="https://instagram.com/pablo018" target="_blank">@pablo018</a></li>
                             <li><a href="https://instagram.com/hostal.espiritual" target="_blank">@hostal.espiritual</a></li>
+                            <li><a href="https://instagram.com/negrodelgado2023" target="_blank"> @negrodelgado2023</a></li>
+                           
                             <li>Alfredo Songer e hijos</li>
                         </ul>
                     </div>
